fixed styling and refactored component to properly align the kite icons and contents.

--- a/src/components/Kite/Kite.module.css
+++ b/src/components/Kite/Kite.module.css
@@ -8,9 +8,8 @@
   transition: transform .6s ease-in-out;
   animation: slide-in-right .7s;
   display: flex;
-  flex-flow: column nowrap;
-  align-items: center;
-  justify-content: center;
+  flex-flow: row nowrap;
+  align-items: flex-start;
   background-color: var(--rvr-white);
   width: 342px;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
@@ -20,38 +19,46 @@
   color: var(--rvr-color-font-dark);
 }
 
+.Kite > * {
+  margin-left: 16px;
+}
+
+.Kite > :first-child {
+  margin-left: 0;
+}
+
 .visible {
   visibility: visible;
 }
 
-.header {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  align-items: center;
+.icon {
+  flex: 0 0 auto;
+  align-self: flex-start;
 }
 
-.content {
+.body {
   flex: 1 1 auto;
   min-width: 0;
-  display: flex;
-  align-items: center;
-  width: 77%;
-}
-
-.title {
-  flex-grow: 2;
 }
 
 .dismissButton {
   flex: 0 0 auto;
   margin-right: -16px;
+  margin-top: -12px;
+  margin-bottom: -12px;
+  align-self: flex-start;
 }
 
-.icon {
-  display: flex;
-  flex: 0 0 auto;
-  margin-right: 16px;
+.header {
+  font-weight: var(--rvr-font-weight-bold);
+}
+
+.header + .content {
+  margin-top: 8px;
+}
+
+.title {
+  flex-grow: 2;
 }
 
 .enterDone {
